@@ -1,3 +1,7 @@
+2000-08-10  Kazu Hirata  <kazu@hxi.com>
+
+	* compile.c (decode): Clean up the code.
+
 2000-06-15  Kazu Hirata  <kazu@hxi.com>
 
 	* compile.c (decode): Distinguish inc/dec.[wl] and adds/subs
